--- a/main.tex
+++ b/main.tex
@@ -219,8 +219,8 @@ Pakets ist kein weiterer Datenaustausch über die Session erlaubt.
 %
 Das PPP entstand ursprünglich aus dem Serial Line Internet Protocol (SLIP).
 Eine Betrachtung der Unterschiede bzw. Neuerungen in PPP lässt somit eine
-Bewertung der Vor- und Nachteile zu (vgl. \cite{ppp_slip_uniwi}). Die Vorteile
-von PPP lassen sich zunächst wie folgt zusammenfassen:
+Bewertung der Vor- und Nachteile zu. Die Vorteile
+von PPP lassen sich zunächst wie folgt zusammenfassen (vgl. \cite{ppp_slip_uniwi}):
 %
 \begin{itemize}
 \item \textbf{Mehrere Netzwerkprotokolle über einen Übertragungskanal:} Das ältere SLIP-Protokoll unterstützt immer nur ein einziges Netzwerkprotokoll.
@@ -233,7 +233,7 @@ von PPP lassen sich zunächst wie folgt zusammenfassen:
 \item \textbf{Aushalndung der Kompression:} Die Kommunikationspartner handeln mittels IPCP aus, ob Van-Jacobson-Header-Compression verwendet werden soll. Im Fall von SLIP muss der Kommunikationspartner wissen, ob das Verfahren unterstützt wird oder nicht und die Software entsprechend konfigurieren.
 \end{itemize}
 %
-Neben den Vorteilen existieren allerdings auch die folgenden Nachteile:
+Neben den Vorteilen existieren allerdings auch die folgenden Nachteile (vgl. \cite{ppp_slip_uniwi}):
 %
 \begin{itemize}
 \item \textbf{Verzögerung der Konfiguration:} Eine Aushandlung der Einstellungen durch das LCP und das darauffolgende Aushandeln der Einstellungen durch die verschiedenen NCPs kann einige Sekunden in Anspruch nehmen. Bei SLIP kommt es zu keiner Verzögerung.
