--- a/main.tex
+++ b/main.tex
@@ -64,7 +64,7 @@ PPP besteht aus folgenden drei Kernfunktionen:
 \begin{figure}[h!]
  \centering
   \includegraphics[width=0.35\textwidth]{img/ppplayers}
- \caption{Eingliederung im OSI/TCP-Modell (Entnommen von \cite{ppposi})}
+ \caption{Eingliederung im OSI/TCP-Modell (Entnommen aus \cite{ppposi})}
  \label{fig:osi}
 \end{figure}
 
@@ -122,7 +122,7 @@ Der strukturelle Aufbau eines typischen PPPoE-Pakets ist in Abbildung \ref{fig:P
 \begin{figure}[h!]
  \centering
   \includegraphics[width=0.5\textwidth]{img/pppoe_aufbau.jpg}
- \caption{Aufbau eines PPPoE-Pakets (Entnommen von \cite{pppoe_h3c})}
+ \caption{Aufbau eines PPPoE-Pakets (Entnommen aus \cite{pppoe_h3c})}
  \label{fig:PPPoE_Bild}
 \end{figure}
 Hierbei ist die Verschachtelung der Protokolle der einzelnen Layer zu erkennen: Die unterste
